# MoFox-Bot-Web-UI

./: .gitignore  Cargo.toml  README.md  byd.md  config.toml  generate_statistics.py  gitignore  index.html  package-lock.json  package.json  requirements.txt  test.md  tsconfig.json  tsconfig.node.json  ui_logger.py  vite.config.ts  启动_MoFox-UI.bat  启动_MoFox-UI_应用模式.bat  我要重写了.byd
dist-electron/: main.js  preload.js
electron/: main.ts  preload.ts
src/: App.tsx  config_manager.rs  index.css  lib.rs  main.rs  models.rs  services.rs
src/components/: AppSidebar.tsx  ConfigurationManager.tsx  Dashboard.tsx  FileSelector.tsx  LogViewer.tsx  LoginPage.tsx  PowerPredictionChart.tsx  SystemManagement.tsx  ThemeManager.tsx
src/components/config/: BotConfig.tsx  DatabaseConfig.tsx  FeatureConfig.tsx  ModelConfig.tsx  PersonalityConfig.tsx  SecurityConfig.tsx  defaults.ts  types.ts
src/components/ui/: alert-dialog.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  carousel.tsx  chart.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  input-otp.tsx  input.tsx  pagination.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  table.tsx  textarea.tsx
src/hooks/: useAuth.ts
src/types/: index.d.ts
static/css/: custom.css
static/js/: app.js  app_new.js  app_old.js
templates/: index.html
