[package]
name = "mofox-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
tera = "1.20"
tokio-tungstenite = "0.20"
futures-util = "0.3"

[lib]
name = "mofox_ui"
path = "src/lib.rs"

[[bin]]
name = "mofox-ui"
path = "src/main.rs"
